--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,7 +66,7 @@
 }
 .showitem {
   width: 31%;
-  height: 200px;
+  height: auto;
   background-color: rgba(255,255,255,1.0);
   float: left;
   margin: 15px 1%;
@@ -75,8 +75,11 @@
 .showimg {
   margin: 10px auto;
   width: 90%;
-  height: 150px;
-  background: rgba(102,102,102,1.0);
+  height: auto;
+  /*background: rgba(102,102,102,1.0);*/
+}
+.showimg>img {
+  width: 100%;
 }
 .showname {
   color: rgb(231,159,109);
