--- a/views/manager.jade
+++ b/views/manager.jade
@@ -5,6 +5,7 @@ html(lang="en")
     head
         - var name = '管理'
         title= name
+        - var gp = result
         meta(charset="utf-8")
         link(rel="stylesheet", type="text/css" href="/stylesheets/style.css")
         link(rel="stylesheet", type="text/css" href="/stylesheets/normalize.v3.0.3.css ")
@@ -26,52 +27,12 @@ html(lang="en")
                 div.upload
                     button.uploadbtn upload photo
                 div.showbox
-                    div.showitem
-                        div.showimg
-                            img(src="", alt="")
-                        div.showother
-                            span.showname imgname1
-                            button.showbtn ...
-                    div.showitem
-                        div.showimg
-                            img(src="", alt="")
-                        div.showother
-                            span.showname imgname2
-                            button.showbtn ...
-                    div.showitem
-                        div.showimg
-                            img(src="", alt="")
-                        div.showother
-                            span.showname imgname3
-                            button.showbtn ...
-                    div.showitem
-                        div.showimg
-                            img(src="", alt="")
-                        div.showother
-                            span.showname imgname4
-                            button.showbtn ...
-                    div.showitem
-                        div.showimg
-                            img(src="", alt="")
-                        div.showother
-                            span.showname imgname5
-                            button.showbtn ...
-                    div.showitem
-                        div.showimg
-                            img(src="", alt="")
-                        div.showother
-                            span.showname imgname6
-                            button.showbtn ...
-                    div.showitem
-                        div.showimg
-                            img(src="", alt="")
-                        div.showother
-                            span.showname imgname7
-                            button.showbtn ...
-                    div.showitem
-                        div.showimg
-                            img(src="", alt="")
-                        div.showother
-                            span.showname imgname8
-                            button.showbtn ...
+                    - for (var x=0; x < gp.length; x++)
+                        div.showitem
+                            div.showimg
+                                img(src="images/"+gp[x].realname, alt=gp[x].name)
+                            div.showother
+                                span.showname=gp[x].name
+                                button.showbtn ...
+
 
