--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,13 +8,13 @@
   float: left;
   padding-bottom: 100%;
 
-  background-color: rgba(43,64,100,1.0);
+  background-color: rgba(0,0,0,1.0);
 }
 .title, .newclass, .classbox {
   text-align: center;
 }
 .title {
-  background-color: rgba(44,48,73,1.0);
+  background-color: rgba(0,0,0,1.0);
 }
 .title>h1 {
   color: rgba(255,255,255,1.0);
@@ -25,9 +25,9 @@
   width: 120px;
   height: 30px;
   margin: 50px 0;
-  background-color: rgba(247,135,85,1.0);
-  color: rgba(255,255,255,1.0);
-  border-radius: 3px;
+  background-color: rgba(255,255,255,1.0);
+  color: rgba(0,0,0,1.0);
+  /*border-radius: 3px;*/
   border: 1px solid rgba(255,255,255,1.0);
 }
 .classlist {
@@ -85,7 +85,7 @@
   width: 100%;
 }
 .showname {
-  color: rgb(231,159,109);
+  color: rgb(0,0,0);
   margin-left:5px;
 }
 .showbtn {
@@ -93,5 +93,5 @@
   margin-right: 5px;
   border:0;
   background-color: transparent;
-  color: rgb(231,159,109);
+  color: rgb(0,0,0);
 }
