--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,7 +35,7 @@
   border-top: 1px solid rgba(0,0,0,.2);
   border-bottom: 1px solid rgba(0,0,0,.2);
 }
-.classitem {
+.classlist li{
   padding: 15px 0;
   list-style-type: none;
   border: 1px solid rgba(0,0,0,.2);
