--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,23 @@
+button {
+  outline: none;
+}
+.btcf:before,
+.btcf:after {
+  content: " "; /* 1 */
+  display: table; /* 2 */
+}
+
+.btcf:after {
+  clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.btcf {
+  *zoom: 1;
+}
 
 .all {
   max-width: 1200px;
@@ -65,33 +85,56 @@
   height: 27px;
 }
 .showbox{
-  margin-left: 1%;
+  position: relative;
 }
 .showitem {
-  width: 31%;
-  height: auto;
+  margin: 14px 7px 0 7px;
+  width: 236px;
   background-color: rgba(255,255,255,1.0);
-  float: left;
-  margin: 15px 1%;
-
+  display: inline-block;
 }
-.showimg {
-  margin: 10px auto;
-  width: 90%;
-  height: auto;
-  /*background: rgba(102,102,102,1.0);*/
-}
-.showimg>img {
+.showitem img {
   width: 100%;
 }
-.showname {
+
+.shownamediv {
   color: rgb(0,0,0);
-  margin-left:5px;
+  margin-left:10px;
+  white-space:nowrap;
+  text-overflow:ellipsis;
+  overflow: hidden;
 }
+.showname {
+   color: rgb(0,0,0);
+ }
 .showbtn {
   float: right;
   margin-right: 5px;
   border:0;
   background-color: transparent;
   color: rgb(0,0,0);
+}
+.showbtn:focus {
+  border: 0;
+}
+.showother {
+  position: relative;
+  margin-bottom: 10px;
+}
+.btndiv {
+  display: none;
+  position: absolute;
+  left: -60px;
+  top: -30px;
+  margin-left: 100%;
+  z-index: 100;
+}
+.editbtn {
+  display: block;
+}
+.btndiv button {
+  color: rgba(255,255,255,1.0);
+  background-color: rgba(0,0,0,1.0);
+  border: 0px solid rgba(255,255,255,1.0);
+  padding: 5px;
 }
