--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,10 +36,12 @@ button {
 .title {
   background-color: rgba(0,0,0,1.0);
 }
-.title>h1 {
-  color: rgba(255,255,255,1.0);
+
+.title>a {
+  color: rgba(245,222,179,1.0);
   padding: 5px 0;
   margin: 0;
+  text-decoration: none;
 }
 .classbtn{
   width: 120px;
@@ -74,7 +76,7 @@ button {
   width: 80%;
   float: right;
   padding-bottom: 100%;
-  background-color: rgba(237,237,237,1.0);
+  background-color: rgba(255,255,255,1.0);
 }
 .uploaddiv {
   height: 60px;
