--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,14 +47,16 @@ button {
   display: none;
 }
 .newclass {
-
+  position: absolute;
+  top: 50%; left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
 }
-.classname {
+.newclassname {
   display: block;
-  margin: 50px auto;
-  width: 75%;
-  height: 20px;
-  margin-bottom: 15px;
+  height: 26px;
+  margin: 15px 0;
   border: none;
 }
 .newclass button {
@@ -65,6 +67,28 @@ button {
   border-radius: 0;
   border: none;
 }
+.hiduc {
+display:none;
+position: absolute;
+top: 50%;
+left: 50%;
+-webkit-transform: translate(-50%,-50%);
+-ms-transform: translate(-50%,-50%);
+transform: translate(-50%,-50%);
+background-color: rgba(0,0,0,1.0);
+width:100%;
+height:100%;
+}
+.hiduc button{
+  margin: 0 10px;
+  padding: 3px 10px;
+  background-color: rgba(44,48,73,1.0);
+  color: rgba(255,255,255,1.0);
+  border-radius: 0;
+  border: none;
+}
+
+
 .title {
   background-color: rgba(0,0,0,1.0);
 }
