--- a/views/manager.jade
+++ b/views/manager.jade
@@ -18,14 +18,14 @@ html(lang="en")
 
     body
         div.all
+            header.sitetitle
+                a(href="http://localhost:27017/manager.html")
+                    span myphoto
             div.left
-                div.title
-                    a(href="http://localhost:27017/manager.html")
-                        h1 myphoto
-                div.classform
+                div.creclass
                     button.classbtn new class
                     div.hidnc
-                        div.newclass
+                        div.abscenter
                             input(type="text").newclassname
                             button.newclassbtn 增加
                             button.hidnewclassbtn 取消
