--- a/views/manager.jade
+++ b/views/manager.jade
@@ -23,13 +23,12 @@ html(lang="en")
                     span myphoto
             div.left
                 div.creclass
-                    button.classbtn new class
-                    div.hidnc
-                        div.abscenter
-                            input(type="text").newclassname
-                            button.newclassbtn 增加
-                            button.hidnewclassbtn 取消
-                div.classbox
+                    button.newclassbtn.abscenter new class
+                    div.hidnewclass.abscenter
+                            input(type="text").creclassname
+                            button.creclassbtn 增加
+                            button.hidcreclassbtn 取消
+                div.showclass
                     ul.classlist
                         li.classitem.this(data-c="") 全部
 
