--- a/views/manager.jade
+++ b/views/manager.jade
@@ -25,7 +25,7 @@ html(lang="en")
                 div.creclass
                     button.newclassbtn.abscenter new class
                     div.hidnewclass.abscenter
-                            input(type="text").creclassname
+                            input(type="text" required).creclassname
                             button.creclassbtn 增加
                             button.hidcreclassbtn 取消
                 div.showclass
